Rename the project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "pytest-reqres-api"
+name = "pytest-dummyjson-api"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
