--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,13 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "pytest-dummyjson-api"
 version = "0.1.0"
+description = "Production-grade API automation framework using pytest + httpx (DummyJSON)"
 requires-python = ">=3.11"
+
 dependencies = [
   "pytest>=8.0.0",
   "httpx>=0.27.0",
@@ -15,7 +21,7 @@ dependencies = [
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-addopts = "-q"
+addopts = "-q -ra"
 markers = [
   "smoke: fast critical checks",
   "regression: broader coverage",
