--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
-.venv/
+# packaging
+*.egg-info/
+dist/
+build/
+
+# python
 __pycache__/
 .pytest_cache/
-.idea/
-*.egg-info/
+.coverage
+htmlcov/
+
+# env files
 env/.env.*
 !env/.env.example
+
+# IDE
+.venv/
+.idea/
