Auth config and tests

--- a/env/.env.example
+++ b/env/.env.example
@@ -1,9 +1,11 @@
-# Which API to target
 BASE_URL=https://dummyjson.com
-
-# Timeouts
 TIMEOUT_SECONDS=10
+RETRY_ATTEMPTS=3
 
-# Optional auth
+# Option A: provide token directly (fast path)
 AUTH_HEADER_NAME=Authorization
-AUTH_HEADER_VALUE=
+AUTH_HEADER_VALUE=Bearer <paste_token_here>
+
+# Option B: login to generate token
+AUTH_USERNAME=
+AUTH_PASSWORD=
