CI workflow smoke regression and redaction

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,53 +1,100 @@
-name: api-tests
+name: API CI
 
 on:
   pull_request:
+    branches: [main]
   push:
-    branches: [ main ]
-  schedule:
-    - cron: "0 8 * * *" # daily (UTC)
+    branches: [main]
   workflow_dispatch:
 
+permissions:
+  contents: read
+
+concurrency:
+  group: api-ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  test:
+  smoke:
+    name: Smoke
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        suite: [smoke, regression]
+    timeout-minutes: 10
+
+    env:
+      PYTHONUNBUFFERED: "1"
+      BASE_URL: "https://dummyjson.com"
+      USERNAME: ${{ secrets.DUMMYJSON_USERNAME }}
+      PASSWORD: ${{ secrets.DUMMYJSON_PASSWORD }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-          cache: "pip"
+          python-version: "3.12"
+          cache: pip
 
-      - name: Install
+      - name: Install dependencies (pyproject.toml)
         run: |
-          python -m pip install -U pip setuptools wheel
-          pip install -e .
+          python -m pip install --upgrade pip
+          pip install .
 
-      - name: Create artifacts dir
-        run: mkdir -p artifacts
-
-      - name: Run tests
-        env:
-          BASE_URL: https://dummyjson.com
-          TIMEOUT_SECONDS: "10"
+      - name: Run Smoke tests
         run: |
-          if [ "${{ matrix.suite }}" = "smoke" ]; then
-            pytest -m smoke --junitxml=artifacts/junit.xml --html=artifacts/report.html
-          else
-            pytest -m regression --junitxml=artifacts/junit.xml --html=artifacts/report.html
-          fi
+          mkdir -p artifacts
+          pytest -m smoke \
+            --junitxml=artifacts/junit-smoke.xml \
+            --html=artifacts/report-smoke.html --self-contained-html
 
-      - name: Upload artifacts
+      - name: Upload artifacts (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-artifacts-${{ matrix.suite }}
+          name: smoke-artifacts
           path: artifacts/
-          if-no-files-found: ignore
+          if-no-files-found: warn
+
+  regression:
+    name: Regression
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    needs: smoke
+    if: github.event_name != 'pull_request'
+
+    env:
+      PYTHONUNBUFFERED: "1"
+      BASE_URL: "https://dummyjson.com"
+      USERNAME: ${{ secrets.DUMMYJSON_USERNAME }}
+      PASSWORD: ${{ secrets.DUMMYJSON_PASSWORD }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: pip
+
+      - name: Install dependencies (pyproject.toml)
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+
+      - name: Run Regression tests
+        run: |
+          mkdir -p artifacts
+          pytest -m regression \
+            --junitxml=artifacts/junit-regression.xml \
+            --html=artifacts/report-regression.html --self-contained-html
+
+      - name: Upload artifacts (always)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: regression-artifacts
+          path: artifacts/
+          if-no-files-found: warn
