--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
     env:
       PYTHONUNBUFFERED: "1"
       BASE_URL: "https://dummyjson.com"
-      USERNAME: ${{ secrets.DUMMYJSON_USERNAME }}
-      PASSWORD: ${{ secrets.DUMMYJSON_PASSWORD }}
+      AUTH_USERNAME: ${{ secrets.AUTH_USERNAME }}
+      AUTH_PASSWORD: ${{ secrets.AUTH_PASSWORD }}
 
     steps:
       - name: Checkout
@@ -67,8 +67,8 @@ jobs:
     env:
       PYTHONUNBUFFERED: "1"
       BASE_URL: "https://dummyjson.com"
-      USERNAME: ${{ secrets.DUMMYJSON_USERNAME }}
-      PASSWORD: ${{ secrets.DUMMYJSON_PASSWORD }}
+      AUTH_USERNAME: ${{ secrets.AUTH_USERNAME }}
+      AUTH_PASSWORD: ${{ secrets.AUTH_PASSWORD }}
 
     steps:
       - name: Checkout
