--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,17 +45,31 @@ jobs:
       - name: Run Smoke tests
         run: |
           mkdir -p artifacts
+          set -o pipefail
           pytest -m smoke \
             --capture=tee-sys \
             --junitxml=artifacts/junit-smoke.xml \
-            --html=artifacts/report-smoke.html --self-contained-html
+            --html=artifacts/report-smoke.html --self-contained-html \
+            2>&1 | tee artifacts/console.log
 
-      - name: Upload artifacts (always)
+      # Always upload reports
+      - name: Upload report artifacts (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: smoke-artifacts
-          path: artifacts/
+          name: smoke-reports
+          path: |
+            artifacts/junit-smoke.xml
+            artifacts/report-smoke.html
+          if-no-files-found: warn
+
+      # Upload logs only if something failed
+      - name: Upload logs on failure (sanitized)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: smoke-logs-failure
+          path: artifacts/console.log
           if-no-files-found: warn
 
   regression:
@@ -90,14 +104,29 @@ jobs:
       - name: Run Regression tests
         run: |
           mkdir -p artifacts
+          set -o pipefail
           pytest -m regression \
+            --capture=tee-sys \
             --junitxml=artifacts/junit-regression.xml \
-            --html=artifacts/report-regression.html --self-contained-html
+            --html=artifacts/report-regression.html --self-contained-html \
+            2>&1 | tee artifacts/console.log
 
-      - name: Upload artifacts (always)
+      # Always upload reports
+      - name: Upload report artifacts (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: regression-artifacts
-          path: artifacts/
+          name: regression-reports
+          path: |
+            artifacts/junit-regression.xml
+            artifacts/report-regression.html
+          if-no-files-found: warn
+
+      # Upload logs only if something failed
+      - name: Upload logs on failure (sanitized)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: regression-logs-failure
+          path: artifacts/console.log
           if-no-files-found: warn
