add JSON schema validation and contract tests

--- a/env/.env.example
+++ b/env/.env.example
@@ -2,10 +2,9 @@ BASE_URL=https://dummyjson.com
 TIMEOUT_SECONDS=10
 RETRY_ATTEMPTS=3
 
-# Option A: provide token directly (fast path)
-AUTH_HEADER_NAME=Authorization
-AUTH_HEADER_VALUE=Bearer <paste_token_here>
-
-# Option B: login to generate token
+# Option A: login to generate token
 AUTH_USERNAME=
 AUTH_PASSWORD=
+
+# Option B: provide token directly (fast path)
+AUTH_HEADER_NAME=Authorization
