Test cases for Products domain

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 markers =
     smoke: Fast critical checks
     regression: Full regression suite
+    negative: Error/edge cases
     contract: API schema / contract validation
     auth: Authorization-related tests
     flaky: Test failed initially but passed on retry (report-only)
